--- a/taaFront/src/app/app.component.html
+++ b/taaFront/src/app/app.component.html
@@ -3,8 +3,7 @@
   <h1>
     Week-ends organiser
   </h1>
-  </div>
-  <app-place-component></app-place-component>
-  <app-sport-component></app-sport-component>
-
-
+</div>
+<app-login-component></app-login-component>
+<app-place-component></app-place-component>
+<app-sport-component></app-sport-component>
