ajouter et configurer la page d'inscription

--- a/taaFront/src/app/app.component.html
+++ b/taaFront/src/app/app.component.html
@@ -1,9 +1,2 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Week-ends organiser
-  </h1>
-</div>
-<app-login-component></app-login-component>
-<app-place-component></app-place-component>
-<app-sport-component></app-sport-component>
+<router-outlet></router-outlet>
