--- a/taaFront/src/app/login-component/login-component.component.html
+++ b/taaFront/src/app/login-component/login-component.component.html
@@ -2,5 +2,7 @@
   login: <input type="text" ng-model="login">
   password:<input type="text" ng-model="passwords">
   <button (click)="handleSignIn()">Sign in</button>
-  <button (click)="handleSignUp()">Sign up</button>
+  <!--<button [routerLink]="['../new-account']" routerLinkActive="active">Don't have an account ?</button> -->
+  <button (click)="handleSignUp()">Don't have an account ?</button>
+
 </form>
