--- a/taaFront/src/app/login-component/login-component.component.html
+++ b/taaFront/src/app/login-component/login-component.component.html
@@ -1,8 +1,9 @@
 <form>
-  login: <input type="text" ng-model="login">
-  password:<input type="text" ng-model="passwords">
+  email: <input type="text" [(ngModel)]="email" name="email">
+  <br>
+  password:<input type="password" [(ngModel)]="password" name="password">
+  <br>
   <button (click)="handleSignIn()">Sign in</button>
-  <!--<button [routerLink]="['../new-account']" routerLinkActive="active">Don't have an account ?</button> -->
   <button (click)="handleSignUp()">Don't have an account ?</button>
 
 </form>
