--- a/taaFront/src/app/new-account-component/new-account-component.component.html
+++ b/taaFront/src/app/new-account-component/new-account-component.component.html
@@ -1,11 +1,11 @@
 <form>
-  First name: <input type="text" [(ngModel)]="firstName" name="firstName">
+  First name*: <input type="text" [(ngModel)]="firstName" name="firstName">
   <br>
-  Last name: <input type="text" [(ngModel)]="lastName" name="lastName">
+  Last name*: <input type="text" [(ngModel)]="lastName" name="lastName">
   <br>
-  Email: <input type="text" [(ngModel)]="email" name="email">
+  Email*: <input type="text" [(ngModel)]="email" name="email">
   <br>
-  Password: <input type="text" [(ngModel)]="password" name="password">
+  Password*: <input type="password" [(ngModel)]="password" name="password">
   <br>
   <angular2-multiselect 
   [data]="places" 
