--- a/taaFront/src/app/new-account-component/new-account-component.component.html
+++ b/taaFront/src/app/new-account-component/new-account-component.component.html
@@ -7,11 +7,13 @@
   <br>
   Password*: <input type="password" [(ngModel)]="password" name="password">
   <br>
+  <!--<p-multiSelect [options]="places" [(ngModel)]="selectedPlaces" optionLabel="name"></p-multiSelect>-->
+  
   <angular2-multiselect 
   [data]="places" 
   [(ngModel)]="selectedPlaces" 
   [settings]="placeDropdownSettings" 
-  name="selectedPlaces" >
+  name="selectedPlaces">
     <c-item>
       <ng-template let-item="item">
         <label>{{item.name}}</label>
