--- a/taaFront/src/app/user/user.component.html
+++ b/taaFront/src/app/user/user.component.html
@@ -1,4 +1,23 @@
 <p>
-  hello {{person?.firstName}} {{person?.lastName}}
+  hello {{user?.firstName}} {{user?.lastName}}
 </p>
+<p-table [value]="values">
+  <ng-template pTemplate="header">
+    <tr>
+      <th>Places</th>
+      <th>Sports</th>
+    </tr>
+  </ng-template>
+
+  <ng-template pTemplate="body" let-value>
+    <tr>
+      <td>
+        {{value.place}}
+      </td>
+      <td >
+        {{value.sport}}
+      </td>
+    </tr>
+  </ng-template>
+</p-table>
 <button (click)=(logOutHandler())>log out</button>
