changer les relations et enlever serializable

--- a/taaFront/src/app/new-account-component/new-account-component.component.html
+++ b/taaFront/src/app/new-account-component/new-account-component.component.html
@@ -11,9 +11,9 @@
   
   <angular2-multiselect 
   [data]="places" 
-  [(ngModel)]="selectedPlaces" 
+  [(ngModel)]="selectedPlace" 
   [settings]="placeDropdownSettings" 
-  name="selectedPlaces">
+  name="selectedPlace">
     <c-item>
       <ng-template let-item="item">
         <label>{{item.name}}</label>
