terminer les css

--- a/taaFront/src/app/new-account-component/new-account-component.component.html
+++ b/taaFront/src/app/new-account-component/new-account-component.component.html
@@ -1,14 +1,20 @@
-<form>
-  First name*: <input type="text" [(ngModel)]="firstName" name="firstName">
+<form class="form">
+  First name*: 
   <br>
-  Last name*: <input type="text" [(ngModel)]="lastName" name="lastName">
+  <input class="input" type="text" [(ngModel)]="firstName" name="firstName">
   <br>
-  Email*: <input type="text" [(ngModel)]="email" name="email">
+  Last name*: 
   <br>
-  Password*: <input type="password" [(ngModel)]="password" name="password">
+  <input class="input" type="text" [(ngModel)]="lastName" name="lastName">
   <br>
-  <!--<p-multiSelect [options]="places" [(ngModel)]="selectedPlaces" optionLabel="name"></p-multiSelect>-->
-  
+  Email*: 
+  <br>
+  <input class="input" type="text" [(ngModel)]="email" name="email">
+  <br>
+  Password*: 
+  <br>
+  <input class="input" type="password" [(ngModel)]="password" name="password">
+  <br>  
   <angular2-multiselect 
   [data]="places" 
   [(ngModel)]="selectedPlace" 
@@ -33,5 +39,5 @@
     </c-item>
   </angular2-multiselect>
 
-  <button (click)="handleSignUp()">Sign up</button>
+  <button class="button" (click)="handleSignUp()">Sign up</button>
 </form>
