--- a/taaFront/src/app/login-component/login-component.component.html
+++ b/taaFront/src/app/login-component/login-component.component.html
@@ -1,9 +1,13 @@
-<form>
-  email: <input type="text" [(ngModel)]="email" name="email">
+<form class="form">
+  email: 
   <br>
-  password:<input type="password" [(ngModel)]="password" name="password">
+  <input class="input" type="text" [(ngModel)]="email" name="email">
   <br>
-  <button (click)="handleSignIn()">Sign in</button>
-  <button (click)="handleSignUp()">Don't have an account ?</button>
+  password:
+  <br>
+  <input class="input" type="password" [(ngModel)]="password" name="password">
+  <br>
+  <button class="button" (click)="handleSignIn()">Sign in</button>
+  <button class="button" (click)="handleSignUp()">Don't have an account ?</button>
 
 </form>
