ajouter la methode pour naviger vers editComponent

--- a/taaFront/src/app/user/user.component.html
+++ b/taaFront/src/app/user/user.component.html
@@ -45,5 +45,7 @@
       </tbody>
     </table>
   </div>
-  <button class="button" (click)=(logOutHandler())>log out</button>
+  <button class="button" (click)=(logOutHandler())>Log out</button>
+  <button class="button" (click)=(editHandler())>Edit my details</button>
+
 </div>
