--- a/taaFront/src/app/edit-account/edit-account.component.html
+++ b/taaFront/src/app/edit-account/edit-account.component.html
@@ -6,6 +6,8 @@
     Password*: 
     <br>
     <input class="input" type="password" [(ngModel)]="password" name="password">
+    <br>
+    Choose a city:
     <br>  
     <angular2-multiselect 
     [data]="places" 
@@ -18,6 +20,8 @@
         </ng-template>
       </c-item>
     </angular2-multiselect>
+    <br>
+    Choose a sport:
     <br>
     <angular2-multiselect 
     [data]="sports" 
