--- a/taaFront/src/app/login-component/login-component.component.html
+++ b/taaFront/src/app/login-component/login-component.component.html
@@ -2,10 +2,16 @@
   email: 
   <br>
   <input class="input" type="text" [(ngModel)]="email" name="email">
+  <div *ngIf="wrongEmail" class="warning">
+    Emai not found please create an account or verify your email
+  </div>
   <br>
   password:
   <br>
   <input class="input" type="password" [(ngModel)]="password" name="password">
+  <div *ngIf="wrongPassword" class="warning">
+    Wrong password !
+  </div>  
   <br>
   <button class="button" (click)="handleSignIn()">Sign in</button>
   <button class="button" (click)="handleSignUp()">Don't have an account ?</button>
