Corriger le bug lié à l'affichage de nom de l'element selectionné

--- a/taaFront/src/app/edit-account/edit-account.component.html
+++ b/taaFront/src/app/edit-account/edit-account.component.html
@@ -16,7 +16,7 @@
     name="selectedPlace">
       <c-item>
         <ng-template let-item="item">
-          <label>{{item.name}}</label>
+          <label>{{item.itemName}}</label>
         </ng-template>
       </c-item>
     </angular2-multiselect>
@@ -30,7 +30,7 @@
     name="selectedSports" >
       <c-item>
         <ng-template let-item="item">
-          <label>{{item.name}}</label>
+          <label>{{item.itemName}}</label>
         </ng-template>
       </c-item>
     </angular2-multiselect>
