corriger les bugs de merge

--- a/taaFront/src/app/user/user.component.html
+++ b/taaFront/src/app/user/user.component.html
@@ -11,7 +11,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let sport of saturdaySports">
-          <td class="bodyLine">{{sport.name}}</td>
+          <td class="bodyLine">{{sport.itemName}}</td>
         </tr>
       </tbody>
     </table>
@@ -23,7 +23,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let sport of sundaySports">
-          <td class="bodyLine">{{sport.name}}</td>
+          <td class="bodyLine">{{sport.itemName}}</td>
         </tr>
       </tbody>
     </table>
